# VLA_Diff_pub

./: .gitignore  README.md  depth.py  habitat_eval_hm3d.py  mark.py  receiver.py  record_odom_image.py  run_vllm.sh  vllm.sh
Openpi/: pyproject.toml
Openpi/examples/libero/: convert_libero_data_to_lerobot.py  main_test_input_output.py
Openpi/examples/uav_flow/: all_task_episode_counts.jsonl  all_task_episode_counts.txt  analyse_basemodel.py  analyze_task_distribution.py  convert_uav_flow_data_to_lerobot.py  convert_uav_flow_data_to_lerobot1.py  convert_uav_flow_data_to_lerobot_backup.py  convert_uav_flow_data_to_lerobot_modified.py  convert_uav_flow_data_to_lerobot_original.py  convert_uav_flow_data_to_lerobot_small.py  convert_uav_flow_data_to_lerobot_without_first_10.py  count_all_task_episodes.py  crash_details.txt  create_sampled_datasets.py  create_sampled_datasets_optimized.py  debug_sampler.py  merge_meta.py  merge_meta_fixed.py  task_distribution_analysis.txt  test_sampling_logic.py
Openpi/scripts/: compute_norm_stats.py  compute_norm_stats_cuda.py  compute_norm_stats_fast.py  compute_norm_stats_final.py  train.py
Openpi/test/: action_chunk.txt
Openpi/test/OPENING/: emu3_inference.py  gemini-flux_inference2-RAG.py  gemini-flux_inference2.py
Openpi/test/episode_compare/: episode_compare.ipynb
Openpi/test/infer/: base_policy.py  eval_parquet.py  eval_parquet_3w.py  evaluate_with_json.ipynb  evaluate_with_parquet.ipynb  evaluate_with_parquet.py  infer_libero.py  infer_uav.py  main.py  serve_custom_model.py  serve_policy.py  test_reality.py  test_simulation.py  test_simulation_ros2.py
Openpi/test/modelscope/: modelscope_upload_multifiles.py  modelscope_upload_singlefile.py
bridge/src/image_bridge/: CMakeLists.txt  package.xml
bridge/src/image_bridge/include/image_bridge/: ImageBridge.hpp
bridge/src/image_bridge/src/: image_bridge_node.cpp
pipeline/: =1.30.0  COMPLETE_REALTIME_GUIDE.md  FINAL_SUCCESS_REPORT.md  FINAL_SUCCESS_SUMMARY.md  IMAGE_SENDING_GUIDE.md  JavaTextListener.java  OPENAI_REALTIME_PROXY_GUIDE.md  QUICK_START.md  README.md  REALTIME_MODELS_GUIDE.md  REALTIME_STATUS_SUMMARY.md  SYSTEM_STATUS_FINAL.md  TERMINAL_SENDER_USAGE.md  VOICE_CHAT_GUIDE.md  VOICE_CHAT_READY.md  WEBRTC_SUCCESS_FINAL.md  WEBRTC_SUCCESS_GUIDE.md  app.py  app_simple.py  demo_setup.sh  diagnose_forward.py  diagnose_realtime_connection.py  doubao.py  doubao_config.py  external_receiver_example.py  fix_realtime_connection.py  incoming_receiver.py  index.html  index_old.html  message_sender.html  my_text_receiver.py  nodejs_listener.js  package.json  php_listener.php  pre_prompt.py  print.py  realtime_webrtc_client.py  requirements.txt  ros_publisher.py  script.js  (+18 more)
pipeline/__MACOSX/: ._pipeline
pipeline/__MACOSX/pipeline/: ._index.html  ._index_old.html  ._requirements.txt  ._test_new_features.py
pipeline/doubao_voice/: =14.0  pyproject.toml  setup.py
pipeline/logs/: external_receiver.pid  incoming_receiver.pid  main_service.pid  services.info
pipeline/pipeline/: README.md  app.py  app_simple.py  client_example.py  config_example.py  external_receiver_example.py  go.mod  go_listener.go  incoming_receiver.py  index.html  index_simple.html  message_monitor.html  message_sender.html  network_test.py  requirements.txt  restart_all.sh  script.js  simple_client.py  simple_listener.py  simple_test.py  start_all.sh  start_listeners.sh  stop_all.sh  styles.css  test_gemini_direct.py  test_send_message.py  test_services.sh
scripts/: bridge.sh  main_fsm.sh  mllm.sh  ros1.sh  ros2.sh  rviz.sh  vlm.sh
simulation/EGO-Planner-v2/: goal.py
simulation/EGO-Planner-v2/src/Utils/cloud_filter/: CMakeLists.txt  package.xml
simulation/EGO-Planner-v2/src/Utils/cloud_filter/launch/: filter.launch
simulation/EGO-Planner-v2/src/Utils/cloud_filter/src/: pointcloud_filter_node.cpp  timestamp_converter_node.cpp
simulation/EGO-Planner-v2/src/Utils/goal_converter/: CMakeLists.txt  package.xml
simulation/EGO-Planner-v2/src/Utils/goal_converter/src/: goal_converter.cpp
simulation/EGO-Planner-v3/: pub_action.py
simulation/EGO-Planner-v3/src/utils/cloud_filter/: CMakeLists.txt  package.xml
simulation/EGO-Planner-v3/src/utils/cloud_filter/launch/: filter.launch
simulation/EGO-Planner-v3/src/utils/cloud_filter/src/: goal_converter.cpp  pointcloud_filter_node.cpp  timestamp_converter_node.cpp
simulation/cv_bridge/: rviz_cfg.rviz
simulation/ros_utils/src/ply_publisher/: CMakeLists.txt
simulation/ros_utils/src/ply_publisher/include/ply_publisher/: depth_renderer.h  ground_align.h  pc_processor.h
simulation/ros_utils/src/ply_publisher/launch/: ply_publisher.launch
simulation/ros_utils/src/ply_publisher/src/: depth_renderer.cu  depth_renderer_cpu.cpp  ground_align.cpp  ply_publisher_node.cpp  sensor_manager.cpp
simulation/ros_utils/src/ply_saver/: package.xml
simulation/ros_utils2/src/ply_publisher/: CMakeLists.txt  package.xml
simulation/ros_utils2/src/ply_publisher/include/ply_publisher/: sensor_manager.h
simulation/ros_utils2/src/ply_publisher/launch/: decompressed.launch  ply_publisher.launch
simulation/ros_utils2/src/ply_publisher/src/: pc_processor.cpp  ply_publisher_node.cpp  sensor_manager.cpp
simulation/ros_utils2/src/ply_saver/: CMakeLists.txt
simulation/ros_utils2/src/ply_saver/src/: save_first_ply.cpp
simulation/ros_utils2/src/state_monitor/: CMakeLists.txt  package.xml
simulation/ros_utils2/src/state_monitor/include/state_monitor/: state_monitor.h
simulation/ros_utils2/src/state_monitor/launch/: state_monitor.launch
simulation/ros_utils2/src/state_monitor/src/: state_monitor.cpp
test_main/: base_policy.py  base_policy_real.py  print.py  test_simulation.py  test_simulation_mllm.py  test_simulation_new.py  test_simulation_real.py  test_simulation_real_mllm.py  test_simulation_replan.py  test_simulation_ros1.py  test_simulation_ros2.py  test_simulation_sim_mllm.py
test_main/scripts/: 3dgs-diff.sh  ros1.sh  ros2.sh  state_monitor.sh
test_main/utils/: command.py  marker.py  param.py
ws_bridge/src/: 1.py  LICENSE.txt
(+430 files in other folders)
