<?xml version="1.0"?>
<package format="2">
  <name>image_bridge</name>
  <version>0.1.0</version>
  <description>ROS1 image bridge to TCP</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
