<?xml version="1.0"?>
<package format="2">
  <name>ply_saver</name>
  <version>0.0.1</version>
  <description>Save first PointCloud2 message as PLY file</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>
</package>
