<?xml version="1.0"?>
<package format="2">
  <name>goal_converter</name>
  <version>0.0.1</version>
  <description>Convert geometry_msgs/PoseStamped to quadrotor_msgs/GoalSet with fixed ID</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>

</package>
